--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "2"
 services:
-  nginx:
+  nginx:  #服务名字
     restart: always
-    image: nginx
-    ports:
+    image: nginx #镜像
+    ports: #开启映射端口
       - "80:80"
       - "443:443"
     volumes:
-      - /mnt/codetest/code/php/conf/nginx/conf.d:/etc/nginx/conf.d
-      - /mnt/codetest/code/php/conf/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - /mnt/codetest/code/php/log/nginx:/var/log/nginx
-    links:
+      - ./conf/nginx/conf.d:/etc/nginx/conf.d
+      - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./log/nginx:/var/log/nginx
+    links: # 网络链接 php-fpm服务
       - "php-fpm:php-fpm"
-    depends_on:
+    depends_on: #依赖，等php-cpm启动后，启动
       - php-fpm
-    volumes_from:
+    volumes_from: #磁盘共享
       - php-fpm
   php-fpm:
     restart: always
@@ -22,7 +22,7 @@ services:
     expose:
       - "9000"
     volumes:
-      - /mnt/codetest/code/php/conf/php/php.ini:/opt/bitnami/php/etc/php.ini
-      - /mnt/codetest/code/php/conf/php/php-fpm.conf:/opt/bitnami/php/etc/php-fpm.conf
-      - /mnt/codetest/code/php/log/php:/opt/bitnami/php/logs
-      - /mnt/codetest/code/php/www:/app
+      - ./conf/php/php.ini:/opt/bitnami/php/etc/php.ini
+      - ./conf/php/php-fpm.conf:/opt/bitnami/php/etc/php-fpm.conf
+      - ./log/php:/opt/bitnami/php/logs
+      - ./www:/app
