--- a/conf/nginx/conf.d/default.conf
+++ b/conf/nginx/conf.d/default.conf
@@ -29,7 +29,7 @@ server {
     #
     location ~ \.php$ {
         root   /app;
-        fastcgi_pass   php-fpm:9000;
+        fastcgi_pass   service_php-fpm:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
