--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,4 +39,6 @@ services:
     volumes:
       - ./data/mysql:/var/lib/mysql
       - ./log/mysql:/var/log/mysql
+    environment:
+      - MYSQL\_ROOT\_PASSWORD=123456
 
