--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,5 +40,7 @@ services:
       - ./data/mysql:/var/lib/mysql
       - ./log/mysql:/var/log/mysql
     environment:
-      - MYSQL\_ROOT\_PASSWORD=123456
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=123456
+      - MYSQL_ROOT_PASSWORD=123456
 
