--- a/conf/nginx/conf.d/default.conf
+++ b/conf/nginx/conf.d/default.conf
@@ -6,7 +6,7 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /app;
+        root   /app/web1;
         index  index.html index.htm index.php;
     }
 
@@ -16,7 +16,7 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /app;
+        root   /app/web1;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
@@ -28,7 +28,7 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        root   /app;
+        root   /app/web1;
         fastcgi_pass   service_php-fpm:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
