--- a/conf/nginx/conf.d/default.conf
+++ b/conf/nginx/conf.d/default.conf
@@ -1,14 +1,14 @@
 server {
-    listen       80;
+    listen       8080;
     server_name  localhost;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
-
+    root /app/firmoo;
     location / {
-        root   /app/web1;
         index  index.html index.htm index.php;
-    }
+   	try_files $uri $uri/ /index.php?$query_string; 
+   }
 
     #error_page  404              /404.html;
 
@@ -16,7 +16,6 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /app/web1;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
@@ -28,7 +27,6 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        root   /app/web1;
         fastcgi_pass   service_php-fpm:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
